--- a/playbooks/roles/get_defaults/tasks/main.yml
+++ b/playbooks/roles/get_defaults/tasks/main.yml
@@ -6,10 +6,13 @@
     tapisdir: '{{ tapisdir | default(tapisdir_default) }}'
     tapisdatadir: '{{ tapisdatadir | default(tapisdatadir_default) }}'
     global_vault_url: '{{ global_vault_url | default(global_vault_url_default) }}'
-    global_service_url: '{{ global_service_url | default(global_service_url_default) }}'
+    #global_service_url: '{{ global_service_url | default(global_service_url_default) }}'
+    global_service_url: '{{ global_service_url }}'
     components_to_deploy: '{{ components_to_deploy | default(components_to_deploy_default) }}'
-    global_devtenant_url: '{{ global_devtenant_url | default(global_devtenant_url_default) }}'
-    global_primary_site_admin_tenant_base_url: '{{ global_primary_site_admin_tenant_base_url | default(global_primary_site_admin_tenant_base_url_default) }}'
+    #global_devtenant_url: '{{ global_devtenant_url | default(global_devtenant_url_default) }}'
+    global_devtenant_url: '{{ global_devtenant_url }}'
+    #global_primary_site_admin_tenant_base_url: '{{ global_primary_site_admin_tenant_base_url | default(global_primary_site_admin_tenant_base_url_default) }}'
+    global_primary_site_admin_tenant_base_url: '{{ global_primary_site_admin_tenant_base_url }}'
 
 - name: Values being used
   ansible.builtin.debug:
