--- a/playbooks/roles/jobs/defaults/main/vars.yml
+++ b/playbooks/roles/jobs/defaults/main/vars.yml
@@ -2,7 +2,7 @@
 
 jobs_service_name: jobs
 jobs_service_site_id: "{{ global_site_id }}"
-jobs_service_tenant_id: admin
+jobs_service_tenant_id: "{{ global_service_tenant_id }}"
 jobs_service_url: "{{ global_service_url }}"
 jobs_postgres_pvc: jobs-postgres-vol01
 jobs_storage_class: "{{ global_storage_class }}"
