--- a/playbooks/roles/security/defaults/main/vars.yml
+++ b/playbooks/roles/security/defaults/main/vars.yml
@@ -5,7 +5,7 @@ security_heap_max: 3G
 security_heap_min: 3G
 security_service_name: security
 security_service_site_id: "{{ global_site_id }}"
-security_service_tenant_id: admin
+security_service_tenant_id: "{{ global_service_tenant_id }}"
 security_service_url: "{{ global_service_url }}"
 security_postgres_pvc: sk-postgres-vol01
 security_storage_class: "{{ global_storage_class }}"
