--- a/playbooks/roles/proxy/templates/kube/nginx/locations/ui.conf
+++ b/playbooks/roles/proxy/templates/kube/nginx/locations/ui.conf
@@ -4,7 +4,7 @@ location /
 {% if "tapisui" in proxy_nginx_service_list %}
     proxy_pass http://tapisui-service:3000;
 {% else %}
-    proxy_pass https://tapis-project.org;
+    proxy_pass {{ proxy_primary_site_admin_tenant_base_url }};
 {% endif %}        
     proxy_redirect off;
     proxy_set_header Host $host;
