Adding Postgres 16 upgrade changes

--- a/playbooks/roles/files/defaults/main/vars.yml
+++ b/playbooks/roles/files/defaults/main/vars.yml
@@ -2,6 +2,7 @@
 
 files_node_selector: null
 files_rabbitmq_hostname: files-rabbitmq
+files_postgres_hostname: files-postgres-16
 files_service_name: files
 files_service_site_id: "{{ global_site_id }}"
 files_service_tenant_id: "{{ global_service_tenant_id }}" 
