--- a/playbooks/roles/files/templates/kube/api/deploy.yml
+++ b/playbooks/roles/files/templates/kube/api/deploy.yml
@@ -6,7 +6,7 @@ metadata:
     app: files-api
   name:  files-api
 spec:
-  replicas: {{files_replicas}}
+  replicas: {{files_api_replicas}}
   selector:
     matchLabels:
       app: files-api
