--- a/playbooks/roles/files/templates/kube/postgres_16/migrate/files-migrate-pg-11-to-16-vars-configmap.yml
+++ b/playbooks/roles/files/templates/kube/postgres_16/migrate/files-migrate-pg-11-to-16-vars-configmap.yml
@@ -14,11 +14,11 @@ data:
   "PG_11_SCHEMA": "public"
   "PG_16_POD": "files-postgres-16"
   "PG_16_HOST": "files-postgres-16"
-  "PG_16_ADMIN_USER": "tapisfiles" # shouldn't this be "postgres"
+  "PG_16_ADMIN_USER": "tapisfiles" 
 #  "PG_16_ADMIN_USER_PASSWORD": - defined in job yml file
   "PG_16_TAPIS_USER": "tapisfiles"
 #  "PG_16_TAPIS_USER_PASSWORD": - defined in job yml file
   "PG_16_PORT": "5432"
-  "PG_16_DATABASE": "tapisfiles" # change this to tapisfilesdb (like systems)
-  "PG_16_SCHEMA": "public" # should this be "tapis_files"
+  "PG_16_DATABASE": "tapisfiles" 
+  "PG_16_SCHEMA": "public" 
 
