--- a/playbooks/roles/notifications/templates/docker/docker-compose.yml
+++ b/playbooks/roles/notifications/templates/docker/docker-compose.yml
@@ -87,6 +87,9 @@ services:
       - TAPIS_QUEUE_HOST=notifications-rabbitmq
       - TAPIS_QUEUE_ADMIN_USER=tapis
       - TAPIS_QUEUE_USER=notif
+      - TAPIS_MAIL_PROVIDER={{notifications_mail_provider}}
+      - TAPIS_SMTP_HOST={{notifications_mail_host}}
+      - TAPIS_SMTP_PORT={{notifications_mail_port}}
     env_file:
       - {{ tapisdatadir }}/notifications/env
     networks:
