--- a/playbooks/roles/vault/templates/docker/docker-compose.yml
+++ b/playbooks/roles/vault/templates/docker/docker-compose.yml
@@ -14,6 +14,7 @@ services:
       - 127.0.0.1:8200:8200
     environment:
       - VAULT_ADDR=http://0.0.0.0:8200
+      - memory-swappiness=0
     volumes:
       - ./vault.hcl:/vault/config/vault.hcl
       - {{ vault_data_dir }}/data:/vault/data
