--- a/playbooks/roles/files/templates/kube/postgres_16/deploy.yml
+++ b/playbooks/roles/files/templates/kube/postgres_16/deploy.yml
@@ -22,6 +22,11 @@ spec:
         image: postgres:16
         ports:
           - containerPort: 5432
+        resources:
+          requests:
+            cpu: "1000m"
+          limits:
+            cpu: "1000m"
         env:
         - name: PGDATA
           value: "/pgdata/data"
