--- a/playbooks/roles/jobs/templates/kube/workers/jobwkr-DefaultQueue.yml
+++ b/playbooks/roles/jobs/templates/kube/workers/jobwkr-DefaultQueue.yml
@@ -72,6 +72,8 @@ spec:
               key: rabbitmq-jobs-password
         - name: TAPIS_REQUEST_LOGGING_FILTER_PREFIXES
           value: "/v3/jobs"
+        - name: TAPIS_AUDITING_ENABLED
+          value: {{ jobs_auditing_enabled }}
         - name: JAVA_OPTS 
           value: "-Xms1g -Xmx4g"
         - name: MAIN_CLASS
