Files: add FILES_AUDIT_ENABLED to api and worker deployments.

--- a/playbooks/roles/files/defaults/main/vars.yml
+++ b/playbooks/roles/files/defaults/main/vars.yml
@@ -17,4 +17,5 @@ files_rabbitmq_pvc: files-rabbitmq-data
 files_postgres_pvc: files-pgdata
 files_node_name: true
 files_use_topology_spread_constraints: true
+files_audit_enabled: false
 
