--- a/playbooks/roles/files/templates/kube/api/deploy.yml
+++ b/playbooks/roles/files/templates/kube/api/deploy.yml
@@ -78,7 +78,9 @@ spec:
             configMapKeyRef:
               name: files-config
               key: globus_client_id
- 
+
+        - name: TAPIS_AUDIT_ENABLED
+          value: {{ files_audit_enabled }}
         - name: TAPIS_DB_CONNECTION_POOL_SIZE
           value: "10"
         - name: TAPIS_DB_CONNECTION_POOL_CORE_SIZE
