--- a/playbooks/roles/files/templates/kube/worker/deploy.yml
+++ b/playbooks/roles/files/templates/kube/worker/deploy.yml
@@ -79,6 +79,8 @@ spec:
                   name: files-config
                   key: globus_client_id
 {% endif %}
+            - name: TAPIS_AUDIT_ENABLED
+              value: {{ files_audit_enabled }}
             - name: CHILD_THREAD_POOL_SIZE
               value: "20"
             - name: PARENT_THREAD_POOL_SIZE
