--- a/playbooks/roles/systems/defaults/main/vars.yml
+++ b/playbooks/roles/systems/defaults/main/vars.yml
@@ -8,6 +8,11 @@ systems_service_url: "{{ global_service_url }}"
 systems_storage_class: "{{ global_storage_class }}"
 systems_postgres_pvc: systems-postgres-vol01
 systems_globus_client_id: null
+systems_tms_enabled: false
+systems_tms_client_id: null
+systems_tms_client_secret: null
+systems_tms_tenant: null
+systems_tms_server_url: null
 systems_heap_max: 3G
 systems_heap_min: 1G
 systems_port: 8084
