--- a/playbooks/roles/systems/templates/kube/api/deploy.yml
+++ b/playbooks/roles/systems/templates/kube/api/deploy.yml
@@ -56,3 +56,13 @@ spec:
               secretKeyRef:
                 name: tapis-systems-secrets
                 key: service-password
+          - name: TAPIS_TMS_ENABLED
+            value: {{ systems_tms_enabled }}
+          - name: TAPIS_TMS_CLIENT_ID
+            value: {{ systems_tms_client_id }}
+          - name: TAPIS_TMS_CLIENT_SECRET
+            value: {{ systems_tms_client_secret }}
+          - name: TAPIS_TMS_TENANT
+            value: {{ systems_tms_tenant }}
+          - name: TAPIS_TMS_SERVER_URL
+            value: {{ systems_tms_server_url }}
