Change audit to be disabled by default -- override this in the host_vars for each deployment environment instead

--- a/playbooks/roles/jobs/defaults/main/vars.yml
+++ b/playbooks/roles/jobs/defaults/main/vars.yml
@@ -10,4 +10,4 @@ jobs_rabbitmq_pvc: jobs-rabbitmq-vol01
 jobs_node_selector: null
 jobs_node_name: true
 jobs_port: 8082
-jobs_auditing_enabled: "true"
+jobs_auditing_enabled: "false"
