--- a/playbooks/roles/nginx-custom-locations/defaults/main/vars.yml
+++ b/playbooks/roles/nginx-custom-locations/defaults/main/vars.yml
@@ -8,7 +8,7 @@ proxy_service_site_id: {{ proxy_site_id }}
 proxy_service_name: proxy
 proxy_primary_site_admin_tenant_base_url: {{ global_service_url }}
 proxy_site_router_pvc: site-router-redis-vol01
-proxy_storage_class: rbd-new
+proxy_storage_class: {{ global_storage_class }}
 proxy_nginx_cert_file: $HOME/cert.pem
 proxy_nginx_cert_key: $HOME/cert.key
 proxy_service_tenants:
