--- a/playbooks/roles/files/templates/docker/docker-compose.yml
+++ b/playbooks/roles/files/templates/docker/docker-compose.yml
@@ -33,6 +33,26 @@ services:
     healthcheck:
       test: ["CMD-SHELL", "pg_isready -U postgres"]
 
+  files-postgres-11:
+    container_name: files-postgres-11
+    image: {{ files_migrations_image }}
+    environment:
+     - POSTGRES_USER=tapisfiles
+     - POSTGRES_DATABASE=tapisfiles
+     - PGDATA=/pgdata/data
+    volumes:
+      - {{ tapisdatadir }}/files/postgres/11:/pgdata
+    networks:
+      - tapis
+    env_file:
+      - {{ tapisdatadir }}/files/env
+    healthcheck:
+      test: ["CMD-SHELL", "pg_isready -U postgres"]
+    profiles:
+      - migration
+    command: echo 'this is a test of the emergency broadcast system'
+
+
   files-migrations:
     container_name: files-migrations
     image: {{ files_migrations_image }}
@@ -44,28 +64,6 @@ services:
     networks:
       - tapis
     command: chmod +x files-init-db-sh; /files-init-db-sh
-
-  # files-minio:
-  #   container_name: files-minio
-  #   image: {{ files_minio_image }}
-  #   command: server /data
-  #   environment:
-  #     - MINIO_ACCESS_KEY=user
-  #     - MINIO_SECRET_KEY=password
-  #   volumes:
-  #     - {{ tapisdatadir }}/files/minio:/data
-  #   networks:
-  #     - tapis
-  #   env_file:
-  #     - {{ tapisdatadir }}/files/env
-
-  # files-irods:
-  #   container_name: files-irods
-  #   image: {{ files_irods_provider_postgres_image }}
-  #   networks:
-  #     - tapis
-  #   env_file:
-  #     - {{ tapisdatadir }}/files/env
 
   files-workers:
     container_name: files-workers
@@ -119,27 +117,8 @@ services:
       - RABBITMQ_HOSTNAME=files-rabbitmq
       - RABBITMQ_USERNAME=tapisfiles
       - RABBITMQ_VHOST=tapisfiles
-      # - JAVA_OPTS=-Xdebug -Xmx3g
-      # - MAIN_CLASS=edu.utexas.tacc.tapis.files.api.FilesApplication
-      # - JOBS_PARMS=-n rdr-alt
     depends_on:
       files-postgres:
         condition: service_healthy
       files-rabbitmq:
         condition: service_healthy
-
-  # files-ssh-machine:
-  #   container_name: files-ssh-machine
-  #   build:
-  #     context: ..
-  #     dockerfile: ./deploy/Dockerfile.ssh-machine
-  #   ports:
-  #     - "2222:22"
-
-  # files-ssh-machine2:
-  #   container_name: files-ssh2
-  #   build:
-  #     context: ..
-  #     dockerfile: ./deploy/Dockerfile.ssh-machine
-  #   ports:
-  #     - "2223:22"
