--- a/playbooks/roles/proxy/templates/kube/nginx/nginx.conf
+++ b/playbooks/roles/proxy/templates/kube/nginx/nginx.conf
@@ -33,6 +33,7 @@ stream {
     # Works even if pods_service is down.
     upstream pods_upstream {
         server pods-traefik:80;
+        #server 129.114.35.117:30854; # to set alternative pods traefik server
         server 127.0.0.1:8443 backup;
     }
 
@@ -40,7 +41,7 @@ stream {
     server {
         listen                 5510;
         ssl_preread            off;
-        proxy_timeout          600s;
+        proxy_timeout          3600s;
         proxy_socket_keepalive on;
         #access_log /dev/stdout stream_routing; # debug log if needed
         proxy_pass             pods_upstream;
@@ -51,7 +52,7 @@ stream {
     server {
         listen                  443;
         ssl_preread             on;
-        proxy_timeout           600s;
+        proxy_timeout           3600s;
         proxy_connect_timeout   20s;  # max time to connect to pserver
         #access_log /dev/stdout stream_routing;
         proxy_pass              127.0.0.1:$instanceport;
