--- a/playbooks/roles/proxy/templates/kube/nginx/locations/pods.conf
+++ b/playbooks/roles/proxy/templates/kube/nginx/locations/pods.conf
@@ -6,6 +6,7 @@ location /v3/pods
 {% if "pods" in proxy_nginx_service_list %}
     auth_request /_auth;
     error_page 500 /token-revoked.json; 
+    # proxy_pass http://129.114.35.117:30854; # to set alternative pods traefik server
     proxy_pass http://pods-traefik:80;
 {% else %}
     proxy_pass {{ proxy_primary_site_admin_tenant_base_url }};
