--- a/playbooks/roles/files/templates/kube/api/deploy.yml
+++ b/playbooks/roles/files/templates/kube/api/deploy.yml
@@ -78,8 +78,8 @@ spec:
             configMapKeyRef:
               name: files-config
               key: globus_client_id
-        - name: TAPIS_AUDIT_ENABLED
-          value: "{{ files_audit_enabled }}"
+        - name: TAPIS_AUDITING_ENABLED
+          value: "{{ global_auditing_enabled }}"
         - name: TAPIS_DB_CONNECTION_POOL_SIZE
           value: "10"
         - name: TAPIS_DB_CONNECTION_POOL_CORE_SIZE
