--- a/inventory_example/host_vars/min_primary-kube.yml
+++ b/inventory_example/host_vars/min_primary-kube.yml
@@ -20,6 +20,9 @@ global_storage_class: rbd-new
 # base URL for the admin tenant in our site
 global_primary_site_admin_tenant_base_url: https://admin.test.tapis.io
 
+# Flag for audit log recording
+global_auditing_enabled: 'false'
+
 # location of the nginx cert files
 proxy_nginx_cert_file: $HOME/ssl/wild.tapis.io.pem
 proxy_nginx_cert_key: $HOME/ssl/wild.tapis.io.key
