--- a/playbooks/roles/jobs/templates/docker/jobs-config.env
+++ b/playbooks/roles/jobs/templates/docker/jobs-config.env
@@ -2,4 +2,4 @@ JOBS_SERVICE_SITE_URL={{ jobs_service_url }}
 JOBS_SERVICE_TENANT_ID={{ jobs_service_tenant_id }}
 jobs_site_id={{ jobs_service_site_id }}
 JOBS_SERVICE_NAME={{ jobs_service_name }}
-TAPIS_AUDITING_ENABLED={{ jobs_auditing_enabled }}
+TAPIS_AUDITING_ENABLED={{ global_auditing_enabled }}
