WIP Remove pgadmin for java services.

--- a/playbooks/roles/systems/templates/kube/postgres/service.yml
+++ b/playbooks/roles/systems/templates/kube/postgres/service.yml
@@ -3,6 +3,7 @@ kind: Service
 metadata:  
   name: systems-postgres
 spec:
+  type: NodePort
   selector:    
     app: systems-postgres
   ports:  
