--- a/playbooks/roles/notifications/templates/kube/postgres/service.yml
+++ b/playbooks/roles/notifications/templates/kube/postgres/service.yml
@@ -3,6 +3,7 @@ kind: Service
 metadata:  
   name: notifications-postgres
 spec:
+  type: NodePort
   selector:    
     app: notifications-postgres
   ports:  
