Postgres migrate - updates for Systems.

--- a/playbooks/roles/systems/templates/kube/postgres_16/pvc-postgres.yml
+++ b/playbooks/roles/systems/templates/kube/postgres_16/pvc-postgres.yml
@@ -1,12 +1,11 @@
 kind: PersistentVolumeClaim
 apiVersion: v1
 metadata:
-  name: systems-postgres-16-vol
+  name: {{systems_postgres_pvc}}
 spec:
   accessModes:
     - ReadWriteOnce
-  storageClassName: cinder-csi
+  storageClassName: {{systems_storage_class}}
   resources:
     requests:
       storage: 20Gi
-
