--- a/playbooks/roles/apps/templates/kube/postgres_16/pvc-postgres.yml
+++ b/playbooks/roles/apps/templates/kube/postgres_16/pvc-postgres.yml
@@ -1,12 +1,11 @@
 kind: PersistentVolumeClaim
 apiVersion: v1
 metadata:
-  name: apps-postgres-16-vol
+  name: {{apps_postgres_pvc}}
 spec:
   accessModes:
     - ReadWriteOnce
-  storageClassName: cinder-csi
+  storageClassName: {{apps_storage_class}}
   resources:
     requests:
       storage: 20Gi
-
