--- a/playbooks/roles/systems/templates/kube/migrate_postgres/migrate.env
+++ b/playbooks/roles/systems/templates/kube/migrate_postgres/migrate.env
@@ -8,7 +8,7 @@ export PG_DEPLOY_OLD=systems-postgres
 export PG_DEPLOY_NEW=systems-postgres-16
 # DB connection settings
 export DATABASE_NAME=tapissysdb
-export PG_SCHEMA=tapis_system
+export PG_SCHEMA=tapis_sys
 export FROM_ADMIN_USER=postgres
 export ADMIN_PASSWORD=****
 export SERVICE_USER=tapis_sys
