--- a/playbooks/roles/notifications/templates/kube/dispatcher/deploy.yml
+++ b/playbooks/roles/notifications/templates/kube/dispatcher/deploy.yml
@@ -63,3 +63,6 @@ spec:
             value: "{{notifications_mail_host}}"
           - name: TAPIS_SMTP_PORT
             value: "{{notifications_mail_port}}"
+          - name: TAPIS_SMTP_FROM_NAME
+            value: "{{notifications_mail_from_name}}"
+
