Postgres migrate pg16

--- a/playbooks/roles/apps/templates/kube/postgres_16/apps-init-db.yml
+++ b/playbooks/roles/apps/templates/kube/postgres_16/apps-init-db.yml
@@ -9,7 +9,7 @@ spec:
       restartPolicy: Never
       containers:
       - name: apps-init-db
-        image: postgres:16
+        image: {{ apps_postgres_image }}
         imagePullPolicy: Always
         command: ["/tmp/apps-init-db-sh"]
         volumeMounts:
