Branch java21-tms: Allow all TMS settings to be optional.

--- a/playbooks/roles/systems/templates/kube/api/deploy.yml
+++ b/playbooks/roles/systems/templates/kube/api/deploy.yml
@@ -56,6 +56,7 @@ spec:
               secretKeyRef:
                 name: tapis-systems-secrets
                 key: service-password
+{% if systems_tms_enabled is not none %}
           - name: TAPIS_TMS_ENABLED
             value: "{{ systems_tms_enabled }}"
           - name: TAPIS_TMS_SERVER_URL
@@ -69,3 +70,4 @@ spec:
               secretKeyRef:
                 name: tapis-systems-secrets
                 key: tms-client-key
+{% endif %}
