--- a/playbooks/roles/files/defaults/main/vars.yml
+++ b/playbooks/roles/files/defaults/main/vars.yml
@@ -18,3 +18,4 @@ files_postgres_pvc: files-pgdata
 files_postgres16_pvc: files-pg-16-data
 files_node_name: true
 files_use_topology_spread_constraints: true
+files_auditing_enabled: "{{ global_auditing_enabled }}"
