--- a/playbooks/roles/get_defaults/defaults/main/vars.yml
+++ b/playbooks/roles/get_defaults/defaults/main/vars.yml
@@ -26,7 +26,7 @@ global_service_url: '{{ global_primary_site_admin_tenant_base_url }}'
 global_devtenant_url: 'https://{{ global_devtenant_id }}.{{ global_tapis_domain }}'
 
 # Turn auditing off by default
-global_auditing_enabled: 'false'
+global_auditing_enabled: false
 
 ### relatively safe defaults below
 
