--- a/playbooks/roles/jobs/templates/kube/api/api.yml
+++ b/playbooks/roles/jobs/templates/kube/api/api.yml
@@ -84,7 +84,7 @@ spec:
         - name: TAPIS_REQUEST_LOGGING_INGORE_SUFFIXES
           value: "/healthcheck;/ready;/hello"
         - name: TAPIS_AUDITING_ENABLED
-          value: "{{ global_auditing_enabled }}"
+          value: "{{ jobs_auditing_enabled }}"
 #        - name: TAPIS_LOG_DIRECTORY
 #          value: "/opt/tomcat/logs"
         - name: CATALINA_OPTS 
